# IgrOS-Kernel

./: .clangd  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IgrOS-Kernel.code-workspace  IgrOS-Kernel.kateproject  IgrOS-Kernel.xml  LICENSE  Makefile  README.md  azure-pipelines.yml  build-all.sh  build-i386.sh  build-x86_64.sh  build_i386.sh  build_x86_64.sh  deploy-all.sh  deploy-x86_64.sh  distclean-all.sh  kernel  kernel.asm  kernel.s  kernelFunc.c  kernelFunc.cpp  kmain.cpp  link.ld  port.hpp  run-i386.sh  run-x86_64.sh  sonar-project.properties  videoMem.cpp  videoMem.hpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ccpp.yml  codacy.yml  codeql-analysis.yml  codeql.yml  github-ci.yml  i386.yml  msvc.yml  sonarcloud.yml  x86_64.yml
arch/: CMakeLists.txt  Makefile  cpu.hpp  io.hpp  irq.hpp  paging.hpp  register.hpp  types.hpp
arch/i386/: CMakeLists.txt  Makefile  boot.cpp  cpu.hpp  cr.hpp  exceptions.cpp  exceptions.hpp  fpu.hpp  gdt.cpp  gdt.hpp  idt.cpp  idt.hpp  interrupts.cpp  io.hpp  irq.cpp  irq.hpp  isr.cpp  isr.hpp  keyboard.cpp  link.ld  paging.cpp  paging.hpp  pit.cpp  platform-i386.cpp  register.hpp  vgaConsole.cpp  videoMem.cpp
arch/i386/boot/: CMakeLists.txt  Makefile  boot.s  cpu.s  cr.s  exceptions.s  fpu.s  gdt.s  idt.s  interrupts.s  irq.s  isr.s  multiboot.s  paging.s  port.s  reg.s
arch/i386/drivers/: Makefile  keyboard.cpp  pit.cpp  vmem.cpp
arch/i386/include/: cr.hpp  exceptions.hpp  flags.hpp  gdt.hpp  idt.hpp  interrupts.hpp  keyboard.hpp  kprint.hpp  limits.hpp  memset.hpp  multiboot.hpp  paging.hpp  pit.hpp  port.hpp  taskRegs.hpp  types.hpp  vgaConsole.hpp  videoMem.hpp  vmem.hpp
arch/i386/include/arch/: cr.hpp  exceptions.hpp  gdt.hpp  idt.hpp  interrupts.hpp  irq.hpp  isr.hpp  multiboot.hpp  paging.hpp  port.hpp  reg.hpp  taskRegs.hpp  types.hpp
arch/i386/include/drivers/: keyboard.hpp  pit.hpp  vmem.hpp
arch/i386/include/klib/: kprint.hpp  limits.hpp  memset.hpp
arch/i386/klib/: Makefile  kprint.cpp  kstring.cpp  memset.s
arch/i386/memory/: Makefile  memset.s
arch/platform/: CMakeLists.txt  platform-i386.cpp  platform-x86_64.cpp  platform.hpp
arch/x86/: Makefile  boot.cpp  exception.cpp  exceptions.cpp  idt.cpp  interrupts.cpp  link.ld  videoMem.cpp
arch/x86/boot/: Makefile  boot.s  exception.s  exceptions.s  idt.s  interrupts.s  multiboot.s  port.s
arch/x86/include/: exception.hpp  exceptions.hpp  gdt.hpp  idt.hpp  interrupts.hpp  port.hpp  taskRegs.hpp  videoMem.hpp
arch/x86_64/: CMakeLists.txt  Makefile  boot.cpp  bootstrap.cpp  cpu.hpp  cpuid.hpp  cr.hpp  exceptions.cpp  exceptions.hpp  gdt.cpp  gdt.hpp  idt.cpp  idt.hpp  interrupts.cpp  io.hpp  irq.cpp  irq.hpp  isr.cpp  isr.hpp  kernelFunc.cpp  link.ld  longMode.cpp  longMode.hpp  msr.hpp  paging.cpp  paging.hpp  platform-x86_64.cpp  register.hpp  vgaConsole.cpp
arch/x86_64/asm/: Makefile  gdt.s  kernel.s
arch/x86_64/boot/: CMakeLists.txt  Makefile  boot.s  cpu.s  cpuid.s  cr.s  exceptions.s  gdt.s  idt.s  interrupts.s  io.s  irq.s  isr.s  longMode.s  msr.s  multiboot.s  paging.s  port.s
arch/x86_64/drivers/: Makefile  keyboard.cpp  pit.cpp  vmem.cpp
arch/x86_64/include/: flags.hpp  gdt.hpp  io.hpp  longMode.hpp  port.hpp  types.hpp  vgaConsole.hpp
arch/x86_64/include/arch/: cpuid.hpp  cr.hpp  exceptions.hpp  gdt.hpp  idt.hpp  interrupts.hpp  irq.hpp  isr.hpp  msr.hpp  paging.hpp  port.hpp  taskRegs.hpp  types.hpp
arch/x86_64/include/drivers/: keyboard.hpp  pit.hpp  vmem.hpp
arch/x86_64/klib/: Makefile  memset.s
arch/x86_64/old/: videoMem.cpp  videoMem.hpp
cmake/modules/: CheckCompiler.cmake  EnableCCache.cmake  EnableDoxygen.cmake  VersionGIT.cmake
config/: config-bochs-i386  config-bochs-x86_64
config/cmake/: clang++-i386.cmake  clang++-x86_64.cmake  g++-i386.cmake  g++-x86_64.cmake
config/link/: link-i386.ld  link-x86_64.ld
config/make/: Makefile-i386-clang++.in  Makefile-i386-clang.in  Makefile-i386-g++.in  Makefile-x86_64-clang++.in  Makefile-x86_64-clang.in  Makefile-x86_64-g++.in
config/script/: build-all.sh  build-i386.sh  build-x86_64.sh  deploy-all.sh  deploy-i386.sh  deploy-x86_64.sh  distclean-all.sh  run-bochs-i386.sh  run-bochs-x86_64.sh  test-i386.sh  test-x86_64.sh
config/test/: bochs-i386  bochs-x86_64
dev/: CMakeLists.txt  device.hpp
drivers/: CMakeLists.txt  Makefile  keyboard.cpp  pit.cpp  rtc.cpp  serial.cpp  vmem.cpp
drivers/clock/: CMakeLists.txt  pit.cpp  pit.hpp  rtc.cpp  rtc.hpp
drivers/input/: CMakeLists.txt  keyboard.cpp  keyboard.hpp
drivers/uart/: CMakeLists.txt  serial.cpp  serial.hpp
drivers/vga/: CMakeLists.txt  vmem.cpp  vmem.hpp
include/: elf.hpp  flags.hpp  limits.hpp  multiboot.hpp  platform.hpp  singleton.hpp  types.hpp  version.hpp
include/arch/: cpu.hpp  io.hpp  irq.hpp  paging.hpp  register.hpp  types.hpp
include/arch/i386/: cpu.hpp  cr.hpp  exceptions.hpp  fpu.hpp  gdt.hpp  idt.hpp  io.hpp  irq.hpp  isr.hpp  paging.hpp  port.hpp  reg.hpp  register.hpp  taskRegs.hpp  types.hpp
include/arch/x86_64/: cpu.hpp  cpuid.hpp  cr.hpp  exceptions.hpp  gdt.hpp  idt.hpp  io.hpp  irq.hpp  isr.hpp  longMode.hpp  msr.hpp  paging.hpp  port.hpp  register.hpp  taskRegs.hpp  types.hpp
include/dev/: device.hpp
include/drivers/: keyboard.hpp  pit.hpp  rtc.hpp  vmem.hpp
include/drivers/clock/: pit.hpp  rtc.hpp
include/klib/: kalign.hpp  kmath.hpp  kmemory.hpp  kmemset.hpp  kprint.hpp  kstring.hpp  kstring_view.hpp  memset.hpp
include/mem/: mmap.hpp
include/sys/: device.hpp  elf.hpp  init.hpp
klib/: CMakeLists.txt  Makefile  kAlign.hpp  kFlags.hpp  kSingleton.hpp  kVersion.hpp  kalign.hpp  kflags.hpp  kmath.cpp  kmath.hpp  kmemory.cpp  kmemory.hpp  kprint.cpp  kprint.hpp  kstring.cpp  kstring.hpp  kstring_view.cpp  kstring_view.hpp  kversion.hpp
mem/: CMakeLists.txt  Makefile  mmap.cpp  mmap.hpp
multiboot/: CMakeLists.txt  Makefile  multiboot.cpp  multiboot.hpp
platform/: platform-i386.cpp  platform-x86_64.cpp  platform.hpp
sys/: CMakeLists.txt  elf.hpp  init.hpp
(+3 files in other folders)
